Issue #112 : prevent from scrolling to empyness remove overflow:hidden

--- a/media/startpage.less
+++ b/media/startpage.less
@@ -41,7 +41,6 @@ body {
 }
 
 #ct {
-	overflow: hidden;
 }
 
 // CLEARFIX
